# cuda-ai-2026

./: README.md
default/1_gelu_omp/bolshakova_viktoriya/: gelu_omp.cpp  gelu_omp.h
default/1_gelu_omp/chekmaryov_petr/: gelu_omp.cpp  main.cpp
default/1_gelu_omp/chervyakov_ivan/: gelu_omp.cpp
default/1_gelu_omp/ermilov_dmitry/: CMakeLists.txt  gelu_omp.cpp  gelu_omp.h  main.cpp
default/1_gelu_omp/kozlov_mikhail/: CMakeLists.txt  gelu_omp.cpp  main.cpp
default/1_gelu_omp/malinin_nikita/: gelu_omp.cpp
default/1_gelu_omp/pigasin_dmitry/: CMakeLists.txt  gelu_omp.cpp  gelu_omp.h  main.cpp
default/1_gelu_omp/suchkov_vladislav/: gelu_omp.cpp
default/1_gelu_omp/vikhrev_ivan/: README.md  gelu_omp.cpp  gelu_omp.h  main.cpp
default/1_gelu_omp/volkovskiy_pavel/: gelu_omp.cpp
default/1_gelu_omp/zvorykin_aleksandr/: gelu_omp.cpp
default/2_gelu_cuda/bolshakova_viktoriya/: gelu_cuda.cu
default/2_gelu_cuda/ermilov_dmitry/: CMakeLists.txt  gelu_cuda.cu  gelu_cuda.h  main.cpp
default/2_gelu_cuda/kryukov_dmitry/: gelu_cuda.cu  gelu_cuda.h
default/2_gelu_cuda/pigasin_dmitry/: CMakeLists.txt  gelu_cuda.cu  main.cpp
default/2_gelu_cuda/pinegina_natalia/: log.txt
default/2_gelu_cuda/smirnov_denis/: gelu_cuda.cu
default/2_gelu_cuda/suchkov_vladislav/: gelu_cuda.cu
default/2_gelu_cuda/zemskov_roman/: gelu_cuda.cu  gelu_cuda.h
default/2_gelu_cuda/zinoviev_vladimir/: gelu_cuda.cu
default/2_gelu_cuda/zlobin_george/: gelu_cuda.cu
default/3_naive_gemm_cuda/bolshakova_viktoriya/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/chervyakov_ivan/: log.txt  naive_gemm_cuda.cu
default/3_naive_gemm_cuda/ermilov_dmitry/: CMakeLists.txt  main.cpp  naive_gemm_cuda.cu  naive_gemm_cuda.h
default/3_naive_gemm_cuda/malinin_nikita/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/novozhilov_mikhail/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/putilin_artyom/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/rodygin_vadim/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/suchkov_vladislav/: naive_gemm_cuda.cu  naive_gemm_cuda.h
default/3_naive_gemm_cuda/vikhrev_ivan/: README.md  main.cu  naive_gemm_cuda.cu  naive_gemm_cuda.h
default/3_naive_gemm_cuda/zemskov_roman/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zinoviev_vladimir/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/znamenskiy_mikhail/: naive_gemm_cuda.cu
default/3_naive_gemm_cuda/zvorykin_aleksandr/: naive_gemm_cuda.cu
default/4_block_gemm_cuda/ermilov_dmitry/: CMakeLists.txt  block_gemm_cuda.cu  block_gemm_cuda.h  main.cpp
default/4_block_gemm_cuda/znamenskiy_mikhail/: CMakeLists.txt  block_gemm_cuda.cu  main.cpp
default/6_softmax_cuda/ermilov_dmitry/: CMakeLists.txt  main.cpp  softmax_cuda.cu  softmax_cuda.h
(+44 files in other folders)
