cmake_minimum_required(VERSION 3.10)

project(GeluOMP LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)


add_executable(block_gemm_cuda
    main.cpp
    block_gemm_cuda.cu
)

target_include_directories(block_gemm_cuda PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)
